fix: grid layout issue

--- a/src/components/Landing/features.scss
+++ b/src/components/Landing/features.scss
@@ -7,7 +7,7 @@
     padding: 0 1rem;
 
     @media (min-width: 640px) {
-        grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
         gap: 2rem;
     }
 
